benchmarks module init