@@ -1,22 +1,24 @@
-package org.evrete;
+package org.evrete.benchmarks;
 
-import org.evrete.benchmarks.Expressions;
+import org.evrete.jmh.Drools01;
 import org.junit.jupiter.api.Test;
+import org.openjdk.jmh.results.format.ResultFormatType;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 import org.openjdk.jmh.runner.options.TimeValue;
 
-class ExpressionsBenchmarks {
-
+class DroolsBenchmarks {
     @Test
-    void benchmark() throws RunnerException {
-        TimeValue duration = TimeValue.milliseconds(500L);
-        int iterations = 8;
+    void benchMark() throws RunnerException {
+        TimeValue duration = TimeValue.milliseconds(1000L);
+        int iterations = 10;
         Options opt = new OptionsBuilder()
-                .include(Expressions.class.getSimpleName())
-                //.jvmArgsPrepend("--add-opens=java.base/java.io=ALL-UNNAMED")
+                .include(Drools01.class.getSimpleName())
+                .jvmArgsPrepend("-Djava.util.logging.config.file=src/test/resources/logging.properties")
+                .result("benchmark.csv")
+                .resultFormat(ResultFormatType.CSV)
                 .warmupIterations(iterations)
                 .warmupTime(duration)
                 .measurementIterations(iterations)
@@ -25,6 +27,4 @@ class ExpressionsBenchmarks {
 
         new Runner(opt).run();
     }
-
-
 }
